--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,118 @@
             </button>
           </div>
         </header>
+        <div
+          id="stepDetailPage"
+          class="hidden w-full h-full px-10 py-8 bg-gray-50 overflow-auto"
+        >
+          <div class="max-w-3xl mx-auto bg-white rounded-xl shadow p-8">
+            <div class="flex items-center justify-between mb-8">
+              <h2 class="text-2xl font-bold text-gray-800">Step Details</h2>
+              <button
+                onclick="closeStepDetailPage()"
+                class="text-3xl text-gray-400 hover:text-gray-700"
+              >
+                &times;
+              </button>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+              <div>
+                <div class="mb-4">
+                  <label class="block text-sm font-semibold text-gray-700 mb-1"
+                    >Endpoint</label
+                  >
+                  <input
+                    id="stepDetailEndpointInput"
+                    type="text"
+                    class="w-full border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
+                  />
+                </div>
+                <div class="mb-4">
+                  <label class="block text-sm font-semibold text-gray-700 mb-1"
+                    >Prompt</label
+                  >
+                  <textarea
+                    id="stepDetailPromptInput"
+                    rows="4"
+                    class="w-full border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
+                  ></textarea>
+                </div>
+                <div
+                  id="stepDetailStatus"
+                  class="text-sm text-red-500 mb-2"
+                ></div>
+                <div class="flex justify-end gap-2">
+                  <button
+                    onclick="saveStepDetail()"
+                    class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
+                  >
+                    Save
+                  </button>
+                  <button
+                    onclick="closeStepDetailPage()"
+                    class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300"
+                  >
+                    Cancel
+                  </button>
+                </div>
+              </div>
+              <div>
+                <div class="mb-4">
+                  <label class="block font-semibold text-gray-700 mb-1"
+                    >Generate Video for this Step</label
+                  >
+                  <div
+                    class="image-upload-section mb-2"
+                    id="stepImageUploadSection"
+                  >
+                    <label
+                      for="stepImageInput"
+                      class="upload-label cursor-pointer flex items-center gap-2"
+                    >
+                      <div class="upload-icon">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                      </div>
+                      <div class="upload-text">
+                        Click or drag an image here to upload
+                      </div>
+                      <input
+                        type="file"
+                        id="stepImageInput"
+                        accept="image/*"
+                        style="display: none"
+                      />
+                    </label>
+                    <img
+                      id="stepImagePreview"
+                      style="
+                        display: none;
+                        max-width: 200px;
+                        margin: 10px auto 0;
+                      "
+                      class="rounded shadow"
+                    />
+                    <div
+                      id="stepUploadStatus"
+                      class="upload-status text-sm mt-1"
+                    ></div>
+                  </div>
+                  <button
+                    id="stepGenerateVideoBtn"
+                    class="mt-2 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 flex items-center gap-2"
+                  >
+                    <i class="fas fa-magic"></i> Generate Video
+                  </button>
+                  <div id="stepGenStatus" class="text-sm mt-2"></div>
+                  <div
+                    id="stepVideoPreview"
+                    class="mt-4"
+                    style="display: none"
+                  ></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- Main admin dashboard content restored here (features, templates, modals, etc.) -->
         <!-- Tabbed Content Sections -->
         <div id="tab-dashboard" class="tab-content w-full px-10 py-8">
@@ -316,15 +428,37 @@
             <!-- Feature video generation section -->
             <div id="featureVideoGenSection" class="mb-6">
               <div class="image-upload-section" id="featureImageUploadSection">
-                <label for="featureImageInput" class="upload-label cursor-pointer flex items-center gap-2">
-                  <div class="upload-icon"><i class="fas fa-cloud-upload-alt"></i></div>
-                  <div class="upload-text">Click or drag an image here to upload</div>
-                  <input type="file" id="featureImageInput" accept="image/*" style="display:none;">
+                <label
+                  for="featureImageInput"
+                  class="upload-label cursor-pointer flex items-center gap-2"
+                >
+                  <div class="upload-icon">
+                    <i class="fas fa-cloud-upload-alt"></i>
+                  </div>
+                  <div class="upload-text">
+                    Click or drag an image here to upload
+                  </div>
+                  <input
+                    type="file"
+                    id="featureImageInput"
+                    accept="image/*"
+                    style="display: none"
+                  />
                 </label>
-                <img id="featureImagePreview" style="display:none;max-width:200px;margin:10px auto 0;" class="rounded shadow">
-                <div id="featureUploadStatus" class="upload-status text-sm mt-1"></div>
+                <img
+                  id="featureImagePreview"
+                  style="display: none; max-width: 200px; margin: 10px auto 0"
+                  class="rounded shadow"
+                />
+                <div
+                  id="featureUploadStatus"
+                  class="upload-status text-sm mt-1"
+                ></div>
               </div>
-              <button id="featureGenerateVideoBtn" class="mt-3 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 flex items-center gap-2">
+              <button
+                id="featureGenerateVideoBtn"
+                class="mt-3 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 flex items-center gap-2"
+              >
                 <i class="fas fa-magic"></i> Generate Video
               </button>
               <div id="featureGenStatus" class="text-sm mt-2"></div>
