--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <style>
+      #totalTemplatesCard.faded {
+        background: #fff !important;
+        color: #222 !important;
+        opacity: 0.7;
+      }
+    </style>
   </head>
   <body class="bg-gray-50 min-h-screen">
     <!-- Sidebar and header -->
@@ -235,7 +242,7 @@
               </div>
             </div>
             <div
-              class="rounded-xl bg-cyan-400 text-white p-6 shadow flex flex-col justify-between"
+              class="rounded-xl bg-blue-400 text-white p-6 shadow flex flex-col justify-between"
             >
               <div class="flex justify-between items-center mb-2">
                 <span class="font-medium">Total Templates</span>
