--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <div class="flex items-center mb-10">
           <i class="fa fa-cube text-2xl text-blue-400 mr-2"></i>
           <span class="text-2xl font-bold text-gray-700"
-            >dash<span class="text-blue-400">lite</span></span
+            >AI<span class="text-blue-400 ml-2">Filters</span></span
           >
         </div>
         <nav class="flex-1">
@@ -55,18 +55,11 @@
                 ><i class="fa fa-layer-group mr-3"></i>Templates</a
               >
             </li>
-            <li>
-              <a
-                href="#"
-                class="flex items-center px-3 py-2 rounded-lg text-gray-700 hover:bg-gray-100"
-                ><i class="fa fa-user mr-3"></i>Profile</a
-              >
-            </li>
           </ul>
         </nav>
         <div class="mt-auto flex items-center justify-between pt-8">
           <span class="text-xs text-gray-400"
-            >© 2024 DashLite. Template by Sofnio</span
+            >© 2025 AI Filters. Template by Sofnio</span
           >
         </div>
       </aside>
